docs: update Author styling and generalize Launch4j config packaging description